package nl.novi.boekenbeheer.enums;

public enum BookCopyStatus {
    AVAILABLE,
    LOANED
}
