@startuml

title Klassendiagram Boekenbeheersysteem

hide methods
hide circle
skinparam classAttributeIconSize 0

class Author {
    id : identifier
    firstName : text
    lastName : text
}

class Book {
    id : identifier
    isbn : text
    title : text
    publisher : text
    publicationYear : number
    category : text
    description : text
    coverImagePath : text
}

Author "1" -- "*" Book : schrijft >

class BookCopy {
    id : identifier
    barcode : text
    status : BookCopyStatus
}

Book "1" -- "*" BookCopy : heeft exemplaren >

enum BookCopyStatus {
    AVAILABLE
    LOANED
}

BookCopy --> BookCopyStatus : status

class Customer {
    id : identifier
    keycloakId : text
    firstName : text
    lastName : text
    email : text
    phoneNumber : text
}

class LibraryCard {
    id : identifier
    cardNumber : text
    issueDate : date
    expirationDate : date
    active : boolean
}

class Loan {
    id : identifier
    loanDate : date
    dueDate : date
    returnDate : date
}

Customer "1" -- "1" LibraryCard : bezit >
Customer "1" -- "*" Loan : leent >
BookCopy "1" -- "*" Loan : wordt uitgeleend in >

@enduml